--- a/config/book.yml
+++ b/config/book.yml
@@ -4,7 +4,7 @@ filename: design-concepts
 title: Game Design Concepts
 subtitle: An Experiment in Game Design and Teaching
 description: This is a course in game design (specifically, non-digital systems design).
-author: Written by Ian Schreiber and Typeset by Ernest Lee
+author: Written by Ian Schreiber and Typeset by Ernest 'iFire' Lee
 copyright: 2014
 uuid: 4a394eaf-aecc-4002-b801-6d83cbdc69cb
 pdf_preview_page_range: 1..30
